--- a/.github/workflows/release_drafter.yaml
+++ b/.github/workflows/release_drafter.yaml
@@ -9,9 +9,9 @@ on:
       - master
 
   # # pull_request event is required only for autolabeler
-  pull_request:
-    # Only following types are handled by the action, but one can default to all as well
-    types: all # [opened, reopened, synchronize]
+  # pull_request:
+  #   # Only following types are handled by the action, but one can default to all as well
+  #   types: all # [opened, reopened, synchronize]
   # # pull_request_target event is required for autolabeler to support PRs from forks
   # # pull_request_target:
   # #   types: [opened, reopened, synchronize]
@@ -29,16 +29,32 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+      - name: Detect new version
+        id: check-version
+        if: steps.check-parent-commit.outputs.sha
+        uses: salsify/action-detect-and-tag-new-version@v2.0.1
+        with:
+          create-tag: false
+          version-command: |
+            bash -o pipefail -c "cat micro-sam/micro_sam/__version__.py | jq -r '.version'"
+      - name: Push tag
+        id: tag-version
+        if: steps.check-version.outputs.previous-version != steps.check-version.outputs.current-version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.check-version.outputs.current-version }}
+
       # (Optional) GitHub Enterprise requires GHE_HOST variable set
       #- name: Set GHE_HOST
       #  run: |
       #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
 
       # Drafts your next Release notes as Pull Requests are merged into "master"
-      - uses: release-drafter/release-drafter@v6
-        # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
+      - name: Publish the release notes
+        uses: release-drafter/release-drafter@v6.0.0
         with:
-          config-name: release_config.yaml
-        #   disable-autolabeler: true
+          publish: "${{ steps.tag-version.outputs.new_tag != '' }}"
+          tag: "${{ steps.tag-version.outputs.new_tag }}"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
