--- a/.github/workflows/release_drafter.yaml
+++ b/.github/workflows/release_drafter.yaml
@@ -54,6 +54,7 @@ jobs:
       - name: Publish the release notes
         uses: release-drafter/release-drafter@v6.0.0
         with:
+          config-name: release_config.yaml
           publish: "${{ steps.tag-version.outputs.new_tag != '' }}"
           tag: "${{ steps.tag-version.outputs.new_tag }}"
         env:
